# kc3hack-2024

./: README.md  docker-compose.yaml  package-lock.json
.github/: CODEOWNERS
.github/workflows/: main-kansai-sugoroku.yaml
api/: .env.example  .gitignore  main.py  pyproject.toml
api/cruds/: boke.py  crud.py  pelmanism.py  quiz.py
api/database/: database.py  migrate.py  seed.py
api/docker/: Dockerfile
api/models/: __init__.py  boke.py  pelmanism.py  prefecture.py  quiz.py  quiz_choice.py
api/routers/: routers.py
api/routers/boke/: __init__.py  boke.py
api/routers/boke_evaluation/: __init__.py  boke_evaluation.py
api/routers/pelmanism/: __init__.py  pelmanism.py
api/routers/quiz/: __init__.py  quiz.py
api/schemas/: __init__.py  boke.py  boke_evaluation.py  pelmanism.py  prefecture.py  quiz.py  quiz_choice.py
api/services/: openai.py
api/usecases/: boke_evaluation.py
app/: package-lock.json  package.json
app/docker/: Dockerfile
app/public/: index.html  manifest.json
app/src/: App.tsx
app/src/assets/images/: Kinki.tsx
app/src/components/Game/: Coordinate.tsx  gameClearCompornent.tsx  index.tsx
app/src/components/Head/: Head.tsx
app/src/components/Layout/: MainLayout.tsx
app/src/config/: index.ts
app/src/features/boke_evaluation/: index.ts
app/src/features/bokes/: index.ts
app/src/features/pelmanism/: index.css  (+1 more)
app/src/lib/: axios.ts
app/src/libs/: axios.ts
app/src/pages/: Games.tsx  Home.tsx  NotFound.tsx  test.tsx
app/src/providers/: index.tsx
app/src/routes/: index.tsx
app/src/utils/: array.ts  isType.ts
(+18 files in other folders)
